--- a/app/src/main/res/layout/lesson_activity.xml
+++ b/app/src/main/res/layout/lesson_activity.xml
@@ -15,7 +15,6 @@
         android:text="@string/NextButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -37,10 +36,14 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifCharacterImageView"
-        android:layout_width="363dp"
-        android:layout_height="537dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/character"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
