--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:backgroundTint="@android:color/holo_orange_dark"
+    android:foregroundTint="@android:color/holo_orange_dark">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <TextView-->
+<!--        android:id="@+id/textView"-->
+<!--        android:layout_width="181dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:fontFamily="casual"-->
+<!--        android:text="PrattleBattle"-->
+<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+<!--        android:textSize="30sp"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:layout_editor_absoluteX="115dp"-->
+<!--        tools:layout_editor_absoluteY="33dp" />-->
 
-        <VideoView
-            android:id="@+id/videoView1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView3"-->
+<!--        android:layout_width="91dp"-->
+<!--        android:layout_height="31dp"-->
+<!--        android:fontFamily="casual"-->
+<!--        android:text="Coddesses"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:layout_editor_absoluteX="160dp"-->
+<!--        tools:layout_editor_absoluteY="88dp" />-->
 
-    </RelativeLayout>
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
+<!--        android:layout_width="355dp"-->
+<!--        android:layout_height="67dp"-->
+<!--        android:backgroundTint="@android:color/holo_orange_dark"-->
+<!--        android:fontFamily="sans-serif"-->
+<!--        android:shape="oval"-->
+<!--        android:text="Subscribe now >"-->
+<!--        android:textSize="18sp"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="152dp" />-->
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="79dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:text="Theory"-->
+<!--        android:textSize="24sp"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="256dp" />-->
 
-        android:background="@android:color/transparent"
+<!--    <TextView-->
+<!--        android:id="@+id/textView5"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Practice"-->
+<!--        android:textSize="24sp"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="414dp" />-->
 
-        android:insetLeft="30dp"
-        android:insetTop="30dp"
-        android:insetRight="30dp"
-        android:insetBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-    </Button>
+<!--    <Button-->
+<!--        android:id="@+id/button4"-->
+<!--        android:layout_width="355dp"-->
+<!--        android:layout_height="85dp"-->
+<!--        android:backgroundTint="@color/blue"-->
+<!--        android:text="Rehearse to converse >"-->
+<!--        android:textSize="16sp"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="453dp" />-->
 
+<!--    <Button-->
+<!--        android:id="@+id/button5"-->
+<!--        android:layout_width="355dp"-->
+<!--        android:layout_height="85dp"-->
+<!--        android:backgroundTint="@color/teal_200"-->
+<!--        android:text="Start reading&listening >"-->
+<!--        android:textSize="16sp"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="292dp" />-->
 
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:layout_width="415dp"-->
+<!--        android:layout_height="93dp"-->
+<!--        tools:layout_editor_absoluteX="-2dp"-->
+<!--        tools:layout_editor_absoluteY="622dp" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
