--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -8,15 +8,13 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="110dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
         android:backgroundTint="@color/main"
         android:text="@string/NextButton"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/gifCharacterImageView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -25,7 +23,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginBottom="556dp"
         android:backgroundTint="@color/black"
-        android:text="@string/Lesson"
+        android:text="@string/LessonName"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
@@ -36,14 +34,27 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifCharacterImageView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/character"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lessonTextView" />
+
+    <TextView
+        android:id="@+id/lessonTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/character"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="500dp"
+        android:text="@string/LessonScript"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
