--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -25,13 +25,13 @@
             android:text="@string/placeholder_quiz_question"
             android:textColor="#E81C0D"
             android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/RadioGroup"
+            app:layout_constraintBottom_toTopOf="@+id/radio_group_quiz_answers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
-            android:id="@+id/RadioGroup"
+            android:id="@+id/radio_group_quiz_answers"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:ignore="MissingConstraints"
@@ -105,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/RadioGroup"
+            app:layout_constraintTop_toBottomOf="@+id/radio_group_quiz_answers"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
