--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -7,7 +7,7 @@
     tools:context=".LessonActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toBottomOf="@+id/gifCharacterImageView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/TextViewLessonTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
@@ -27,7 +27,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,10 +40,10 @@
         android:layout_marginEnd="8dp"
         android:src="@drawable/character"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lessonTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/TextViewLesson" />
 
     <TextView
-        android:id="@+id/lessonTextView"
+        android:id="@+id/TextViewLesson"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="150dp"
@@ -55,6 +55,44 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/TextViewLessonTitle" />
+
+    <Button
+        android:id="@+id/buttonPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#FF5722"
+        android:text="@string/play"
+        android:onClick="play"
+        app:iconTint="#FF5722"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPause"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#FF5722"
+        android:text="@string/pause"
+        android:onClick="pause"
+        app:iconTint="#FF5722"
+        app:layout_constraintBottom_toTopOf="@+id/buttonStop"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="97dp"
+        android:backgroundTint="#FF5722"
+        android:text="@string/stop"
+        android:onClick="stop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
