age - check if filled + LessonActivity

--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -7,28 +7,41 @@
     tools:context=".LessonActivity">
 
     <Button
+        android:id="@+id/otherLessonsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FF5722"
+        android:text="Lessons"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMain"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/main"
+        android:backgroundTint="#FF5722"
         android:text="@string/NextButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonMain" />
 
     <TextView
         android:id="@+id/TextViewLessonTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="46dp"
-        android:layout_marginBottom="556dp"
         android:backgroundTint="@color/black"
         android:text="@string/LessonName"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +59,7 @@
         android:id="@+id/TextViewLesson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
         android:text="@string/LessonScript"
@@ -59,35 +72,49 @@
         android:id="@+id/buttonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="35dp"
         android:backgroundTint="#FF5722"
         android:text="@string/play"
         app:iconTint="#FF5722"
         app:layout_constraintBottom_toTopOf="@+id/buttonPause"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextViewLessonTitle"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/buttonPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="35dp"
         android:backgroundTint="#FF5722"
         android:text="@string/pause"
         app:iconTint="#FF5722"
         app:layout_constraintBottom_toTopOf="@+id/buttonStop"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />
 
     <Button
         android:id="@+id/buttonStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="97dp"
+        android:layout_marginStart="35dp"
         android:backgroundTint="#FF5722"
         android:text="@string/stop"
+        app:layout_constraintBottom_toTopOf="@+id/otherLessonsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPause" />
+
+    <Button
+        android:id="@+id/buttonMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FF5722"
+        android:text="@string/main"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/otherLessonsButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
