--- a/app/src/main/res/layout/activity_lessons_menu.xml
+++ b/app/src/main/res/layout/activity_lessons_menu.xml
@@ -31,28 +31,28 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/LessonButton"
                 android:id="@+id/lessons_menu_lesson_button_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/LessonButton"
                 android:id="@+id/lessons_menu_lesson_button_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/LessonButton"
                 android:id="@+id/lessons_menu_lesson_button_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/LessonButton"
                 android:id="@+id/lessons_menu_lesson_button_4"
                 android:layout_width="wrap_content"
@@ -65,25 +65,25 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,25 +95,25 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,25 +125,25 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
