--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,6 @@
 <resources>
     <style name="LessonButton" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/black</item>
-        <item name="app:backgroundTint">#455454</item>
+        <item name="android:backgroundTint">@color/main</item>
     </style>
 </resources>
