--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,9 @@
 
     <Button
         android:id="@+id/buttonToConsult"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="100dp"
         android:backgroundTint="#A8CAC176"
@@ -32,19 +33,22 @@
         android:textColor="#A8504545"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonToEvents" />
 
     <Button
         android:id="@+id/buttonToEvents"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginStart="50dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="100dp"
         android:backgroundTint="#A8CAC176"
         android:text="Events "
         android:textColor="#A8504545"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonToConsult"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -65,8 +69,8 @@
 
     <TextView
         android:id="@+id/textViewCreators"
-        android:layout_width="91dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:fontFamily="casual"
         android:text="@string/coddesses"
@@ -80,8 +84,8 @@
 
     <Button
         android:id="@+id/buttonSubscribe"
-        android:layout_width="355dp"
-        android:layout_height="85dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="33dp"
         android:layout_marginEnd="50dp"
